fix: headline resposive ac text-align left

--- a/carousel.css
+++ b/carousel.css
@@ -145,6 +145,10 @@
       font-size: 1rem;
       line-height: 120%;
       text-align: center;
+
+       @media screen and (min-width: 970px) {
+      text-align: left;
+    }
     }
   }
 }
