--- a/video.css
+++ b/video.css
@@ -145,6 +145,11 @@
       font-size: 1rem;
       line-height: 120%;
       text-align: center;
+
+      
+    @media screen and (min-width: 1200px) {
+      text-align: left;
+    }
     }
   }
 }
